- Updated linux start script - Updated build.gradle for handling run.sh